--- a/Week-10/url-shortener/public/index.html
+++ b/Week-10/url-shortener/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://play-lh.googleusercontent.com/OlbGuCl8s81YRMV5_t0Agx_C6t2b3EFt3Ra8aX1Yb6MTwcnGU-1ZzDChSTc5ca9k_h0"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>URL Shortener</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
